# imagerecog

./: .gitignore  BenBox.code-workspace  BenBox.py  BenBox.spec  BenBox_LLM_Benchmark.md  CHANGELOG.md  Dateiablage.py  Dateiablage.spec  Dockerfile  Dockerfile_DEV  Dockerfile_MCP  Dockerfile_Streamlit  Jenkinsfile  PERFORMANCE_MONITORING.md  PROJECT.md  README.md  TESTING_GUIDE.md  angular.json  app.py  capacitor.config.ts  dbt_project.yml  docker-compose.yml  entrypoint.sh  environment.yml  environment_DEV.yml  environment_MCP.yml  environment_streamlit.yml  package-lock.json  package.json  proxy.conf.json  pyinstaller.bat  pyproject.toml  requirements.txt  requirements_MCP.txt  requirements_streamlit.txt  run.sh  run_test_server.py  shutdown.sh  test_benbox.py  test_remote_mcp.py  (+1 more)
.github/prompts/: copilot-instructions.md
.streamlit/: config.toml  st.secrets.toml.template
image/: x11vnc_startup.sh
mobile/: README.md  capacitor.config.ts  package-lock.json  package.json  server.ts
models/: dbt_model.sql
src/: Dateiablage.py  Dockerfile  client.py  entrypoint.sh  files.py  globals.py  learning.py  methods.py  minio_utils.py  preferences.py  pyinstaller.bat  server.py  snowflake_connector.py  snowflake_utils.py
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts
src/environments/: environment.prod.ts  environment.ts
src/server/: __init__.py  create_content.py  get_country_name.py  get_static_image.py  get_variable_image.py  image_recognition.py  minio.py  (+4 more)
static/: openapi.json  openapi_v2.json
tests/: test_app.py
(+27 files in other folders)
