[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
[project]
name = "BenBox"
version = "0.2.0"
description = "Agentic AI ChatBot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.1",
    "argparse>=1.4.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.1",
    "pillow>=11.2.1",
    "python-dotenv>=1.0.1",
]
